# legoev3

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  cross.txt  meson.build
examples/: example.c
include/: bytecodes.h  ev3.h  ev3Private.h  test.h
src/: Makefile.am  Makefile.in  ev3.c  ev3.h  ev3Btn.c  ev3In.c  ev3Out.c  ev3Snd.c
tests/: btn.c  common.c  snd.c
