AC_INIT([legoev3], [0.1A], [https://github.com/Davester47/legoev3/issues], [], [https://github.com/Davester47/legoev3])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign])
AC_PROG_CC
AC_PROG_RANLIB
AM_PROG_AR
#LT_INIT([disable-static])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
])
AC_OUTPUT
