lib_LTLIBRARIES = libc_output.la
libc_output_la_LDFLAGS = -avoid-version
libc_output_la_SOURCES = c_output.c c_output.h lms2012.h lmstypes.h bytecodes.h
libc_output_la_CFLAGS = -DDISABLE_DAISYCHAIN_COM_CALL

lib_LIBRARIES = libegoev3.a
libegoev3_a_SOURCES = ev3.c lms2012.h lmstypes.h bytecodes.h

include_HEADERS = ev3.h
